[gd_scene load_steps=10 format=3 uid="uid://ft6ngvscr7s6"]

[ext_resource type="Script" path="res://scripts/PopupWA.gd" id="1_2raya"]
[ext_resource type="FontFile" uid="uid://dwi57nbifvxom" path="res://assets/fonts/Pangolin-Regular.ttf" id="1_uoqs6"]
[ext_resource type="FontFile" uid="uid://cilo4gcge8bvm" path="res://assets/fonts/Bungee-Regular.ttf" id="2_mrsjp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nweoh"]
bg_color = Color(0.2, 0.2, 0.278431, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.156863, 0.435294, 0.972549, 1)
corner_radius_top_left = 13
corner_radius_top_right = 13
corner_radius_bottom_right = 13
corner_radius_bottom_left = 13

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rfrc0"]
bg_color = Color(0.156863, 0.435294, 0.972549, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.0588235, 0.345098, 0.878431, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p8rko"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_keyqr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ul5pg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jf8uk"]
content_margin_left = 20.0
content_margin_top = 7.0
content_margin_right = 20.0
content_margin_bottom = 7.0
bg_color = Color(1, 1, 1, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="PopupWA" type="Node2D"]
script = ExtResource("1_2raya")

[node name="PopupContainer" type="Panel" parent="."]
offset_right = 745.0
offset_bottom = 540.0
theme_override_styles/panel = SubResource("StyleBoxFlat_nweoh")

[node name="TitleLabel" type="RichTextLabel" parent="PopupContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 1.0
offset_top = 48.0
offset_right = -1.0
offset_bottom = 154.0
grow_horizontal = 2
theme_override_fonts/normal_font = ExtResource("1_uoqs6")
theme_override_font_sizes/normal_font_size = 80
bbcode_enabled = true
text = "[center]Wrong Answer[/center]"

[node name="SubtextLabel" type="RichTextLabel" parent="PopupContainer"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 1.0
offset_top = -126.0
offset_right = -1.0
offset_bottom = -66.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("1_uoqs6")
theme_override_font_sizes/normal_font_size = 35
bbcode_enabled = true
text = "[center]Tips:[/center]"

[node name="Continue" type="Button" parent="PopupContainer"]
layout_mode = 0
offset_left = 282.0
offset_top = 455.0
offset_right = 488.0
offset_bottom = 518.5
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.0588235, 0.345098, 0.878431, 1)
theme_override_colors/font_hover_color = Color(0.0588235, 0.345098, 0.878431, 1)
theme_override_fonts/font = ExtResource("2_mrsjp")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_rfrc0")
theme_override_styles/hover = SubResource("StyleBoxFlat_rfrc0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rfrc0")
theme_override_styles/focus = SubResource("StyleBoxEmpty_p8rko")
action_mode = 0
text = "Continue"

[node name="FeedbackBox" type="TextEdit" parent="PopupContainer"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -309.0
offset_top = -352.0
offset_right = 323.0
offset_bottom = -95.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_readonly_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_keyqr")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ul5pg")
theme_override_styles/read_only = SubResource("StyleBoxFlat_jf8uk")
editable = false
wrap_mode = 1

[connection signal="pressed" from="PopupContainer/Continue" to="." method="_on_continue_pressed"]
